test/exercises/c-ray/c-ray.noreal.good
c-ray.chpl:117: error: pixelType must be an integral type
